# task_6_PnP

./: CMakeLists.txt  main.cpp  solvePnP.cpp  solvePnP.h
