cmake_minimum_required(VERSION 3.7)
project(task_6)
find_package(OpenCV REQUIRED)
set(opencv_include /usr/local/include/opencv4)
set(PnP_include .)
set(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
add_library(solvePnP SHARED solvePnP.cpp solvePnP.h)
include_directories(${opencv_include} ${PnP_include})
link_directories(/usr/local/lib)
add_executable(PnP main.cpp solvePnP.cpp)
target_link_libraries(PnP ${OpenCV_LIBS})
